--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -2,7 +2,7 @@ macro_bhft_ssh_pass: macro_bhft_ssh_pass{
 compatible = "zmk,behavior-macro";
 label = "macro_bhft_ssh_pass";
 #binding-cells = <0>;
-bindings = <&kp O>;
+bindings = <&kp LS(O)>, <&kp LS(W)>, <&kp LS(J)>, <&kp m>, <&kp LS(M)>, <&kp LS(D)>, <&kp g>, <&kp z>, <&kp LS(N)>, <&kp z>, <&kp LS(N)>, <&kp j>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
